[project]
name = "video-juiciness-detector"
version = "0.1.0"
description = "Video frame rate and stutter detection tool"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
